--- a/content/404.md
+++ b/content/404.md
@@ -11,7 +11,9 @@ params:
 Title: 404
 ---
 
-404
+404 File Not Found
 
-That's an error.
+That's an error. Looks like this page doesn't exist.
+
+Maybe try to find it starting from the [front page](/)?
 
